# p117

./: .gitignore  README  p117.cabal
sql/: p117.sql  test.sql
src/: Main.hs
src/P117/: DBAccess.hs  MainPage.hs  Types.hs  Utils.hs
src/P117/MainPage/: AddPage.hs  AddPredicatePage.hs  CopyPage.hs  DeletePage.hs  EditPage.hs  Tree.hs
static/css/: grid.css  p117.css
static/js/: p117.js
