Name:           p117
Version:        0.0
Cabal-Version:  >= 1.4
Author:         Evgeny Tarasov
Build-type:     Simple
Copyright:      2011 Evgeny Tarasov
License:        GPL
Maintainer:     etarasov.ekb@gmail.com
Stability:      Experimental
Synopsis:       Simle knowledge base similar to mindmaps
Category:       Application

Executable p117
    Build-Depends:  base >=4 && <5,
                    happstack-server >=7.3 && <7.4,
                    mtl >= 1.1,
                    safe >= 0.3,
                    network >= 2.2 && < 3,
                    hsyslog >= 1.4 && < 2,
                    blaze-html >= 0.6 && < 0.7,
                    blaze-markup >= 0.5 && < 0.6,
                    HDBC          == 2.3.*,
                    HDBC-sqlite3  == 2.3.*,
                    containers    >= 0.5 && < 0.6,
                    monad-control == 0.3.*,
                    json          >= 0.4 && < 0.6,
                    lifted-base   >= 0.2 && < 0.3
    Main-Is:        Main.hs
    Other-modules:  P117.MainPage
                    P117.MainPage.Tree
                    P117.Utils
                    P117.DBAccess
    Hs-Source-Dirs: src
    Ghc-Options:    -threaded -Wall -fno-warn-unused-do-bind
